Correct text-alight to text-align in CSS
Fix typo in text alignment property.

--- a/inspo/css/style.css
+++ b/inspo/css/style.css
@@ -77,6 +77,7 @@ nav a:hover {
 .inspo-text {
     font-size: 1.1rem;
     line-height: 1.6;
+    text-alight: left;
 }
 
 footer {
